src/App.css
.MuiToolbar-regular {
  min-height: 40px !important;
  justify-content: center;
}
@media only screen and (max-width: 600px) {
  .MuiBox-root { 
    padding: 0 !important;
  }
}

.App-header {
  display: flex;
  align-items: center;
  justify-content: flex-end;
}

.account-button {
  margin: 0.7rem;
}

.closed {
  text-decoration-line: line-through;
  text-decoration-style: solid;
}

.tabpanel {
  width: inherit;
}

